# aind-data-schema

./: .codespellrc  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  aibs_smartspim_instrument.json  aibs_smartspim_procedures.json  aind_smartspim_instrument.json  bergamo_ophys_session.json  ephys_instrument.json  ephys_rig.json  ephys_session.json  erdantic_generator.py  example.py  exaspim_acquisition.json  exaspim_instrument.json  fip_behavior_rig.json  fip_ophys_rig.json  mri_session.json  newHarpDevice.py  ophys_procedures.json  ophys_session.json  processing.json  pyproject.toml  quality_control.json  status  subject.json  test.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: ci.yml  ci_dev.yml  link-issues-by-milestone.yml  publish_dev.yml  publish_prod.yml  run_dev_tests.yml  run_main_tests.yml  tag.yml  tag_and_publish.yml  tag_and_publish_dev.yml  tag_and_publish_main.yml  update_dev_docs.yml  update_docs.yml  update_schemas.yml
doc_template/source/: aind_data_schema.imaging.rst  aind_data_schema.rst  conf.py  index.rst  modules.rst  opendata.rst
docs/source/: acquisition.md  acquisition.rst  aind_data_schema.behavior.rst  aind_data_schema.components.rst  aind_data_schema.core.rst  aind_data_schema.ephys.rst  aind_data_schema.imaging.rst  aind_data_schema.models.rst  aind_data_schema.ophys.rst  aind_data_schema.rst  aind_data_schema.schema_upgrade.rst  aind_data_schema.utils.rst  aind_data_schema.visualizations.rst  components.rst  conf.py  contributing.md  coordinate_systems.md  data_description.md  data_description.rst  data_organization.rst  diagrams.rst  example_workflow.rst  faq.rst  general.md  general.rst  getting_started.rst  index.rst  instrument.md  metadata.md  model.md  modules.rst  opendata.rst  procedures.md  procedures.rst  processing.md  processing.rst  quality_control.md  quality_control.rst  query.md  registries.rst  (+6 more)
docs_base/base_files/: acquisition.md  instrument.md  procedures.md  subject.md
examples/: ForagingRig__rig.json  aibs_smartspim_instrument.json  aibs_smartspim_instrument.py  aibs_smartspim_procedures.json  aibs_smartspim_procedures.py  aibs_smartspim_rig.json  aibs_smartspim_rig.py  aind_smartspim_acquisition.json  aind_smartspim_instrument.json  aind_smartspim_instrument.py  aind_smartspim_rig.json  aind_smartspim_rig.py  barseq_780345_acquisition.json  barseq_780346_acquisition.json  barseq_acquisition.py  barseq_acquisition_README.md  barseq_instrument.py  bergamo_ophys_acquisition.json  bergamo_ophys_acquisition.py  bergamo_ophys_session.json  bergamo_ophys_session.py  data_description.json  data_description.py  ephys_acquisition.json  ephys_acquisition.py  ephys_instrument.json  ephys_instrument.py  ephys_rig.json  ephys_rig.py  ephys_session.json  ephys_session.py  exaspim_acquisition.json  exaspim_acquisition.py  exaspim_instrument.json  exaspim_instrument.py  exaspim_quality_control.json  exaspim_quality_control.py  exaspim_rig.json  exaspim_rig.py  fip_behavior_instrument.json  (+53 more)
examples/2026.01.16_barseq_acquisition/: PLACEHOLDERS_TO_FILL.md  README.md  SUMMARY.md  barseq_780345_acquisition.json  barseq_780346_acquisition.json  barseq_780346_barcodeseq_acquisition.json  barseq_780346_geneseq_acquisition.json  barseq_780346_hyb_acquisition.json  barseq_acquisition_builder.py  barseq_barcodeseq_builder.py  barseq_geneseq_builder.py  barseq_hyb_builder.py  constants.py  experiment_params.py  generate_780346_acquisition.py  generate_780346_barcodeseq_acquisition.py  generate_780346_geneseq_acquisition.py  generate_780346_hyb_acquisition.py  generate_barcodeseq_acquisition.py  generate_barseq_acquisitions.py  generate_geneseq_acquisition.py  generate_hyb_acquisition.py  pyproject.toml  utils.py
examples/2026.01.16_barseq_acquisition/supporting_docs/: MAPseq-BARseq methods_forSciComp.docx  MAPseq-BARseq methods_forSciComp.txt  MMConfig_Ti2E-xc2.1.txt  codebookLC_plus_Th_Pdyn_codebook.csv  ~$Pseq-BARseq methods_forSciComp.txt
schemas/: acquisition_schema.json  data_description_schema.json  instrument_schema.json  metadata_schema.json  model_schema.json  mri_session_schema.json  procedures_schema.json  processing_schema.json  quality_control_schema.json  rig_schema.json  session_schema.json  subject_schema.json
scripts/files-test/: test_behavior_videos.py
src/aind_data_schema/: __init__.py  assembly.py  base.py  behavior.py  coordinates.py  data_asset.py  data_asset_record.py  data_description.py  data_record.py  datamanipulation.py  datamanipulationV2.py  device.py  manufacturers.py  metadata.py  positions.py  procedures.py  processing.py  quality_metrics.py  reagent.py  rig.py  session.py  stimulus.py  subject.py
tests/: __init__.py  test_acquisition.py  test_acquisition_configs.py  test_aind_generic.py  test_autodoc_pyd.py  test_base.py  test_behavior.py  test_bump_schema_versions.py  test_check_schema_versions.py  test_compatibility_check.py  test_components_configs.py  test_components_stimulus.py  test_components_subjects.py  test_composability_merge.py  test_configs.py  test_coordinates.py  test_core.py  test_data_asset.py  test_data_asset_record.py  test_data_description.py  test_data_record.py  test_device.py  test_diagram_builder.py  test_docdb.py  test_enum_models.py  test_enum_names.py  test_ephys.py  test_erd_generator.py  test_examples.py  test_examples_generator.py  test_extensions.py  test_identifiers.py  test_imaging.py  test_inst_acq_compatibility.py  test_instrument.py  test_json_writer.py  test_measurements.py  test_message_handler.py  test_metadata.py  test_metadata_acquisition_validators.py  (+22 more)
visualizations/: plot_session.py  plot_timeline.py  timeline.py
(+189 files in other folders)
