[project]
name = "barseq-acquisition-metadata"
version = "0.1.0"
description = "Generate acquisition.json metadata files for BARseq experiments"
requires-python = ">=3.10"
dependencies = [
    "aind-data-schema>=2.2.0",
    "aind-data-schema-models>=0.4.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
